<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">Zen Budget</string>
    <string name="title_home">Home</string>
    <string name="title_expense">Expense</string>
    <string name="title_event">Event</string>
    <string name="title_chat">AI chat</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="categories">
        <item>Select Category</item>
        <item>Housing</item>
        <item>Utilities</item>
        <item>Food</item>
        <item>Transportation</item>
        <item>Insurance</item>
        <item>Healthcare</item>
        <item>Personal Care</item>
        <item>Entertainment</item>
        <item>Clothing</item>
        <item>Education</item>
        <item>Savings and Investments</item>
        <item>Travel</item>
        <item>Miscellaneous</item>
    </string-array>
    <string-array name="events">
        <item>Select Events</item>
        <item>Event 1</item>
        <item>Event 2</item>
    </string-array>
    <string name="send_message">Send</string>
    <string name="chat_icon">Chat icon</string>
    <string name="type_your_message">Type your message</string>
    <string name="logo">Logo</string>
    <string name="hardcoded_message">This is a received message</string>
    <string name="loading">Loading</string>
    <string name="title_receipt">Receipt Scanning</string>
    <string name="receipt_product">Product</string>
    <string name="receipt_amount">Amount</string>
    <string name="receipt_quantity">Quantity</string>
    <string name="receipt_subtotal">Total</string>
    <string name="receipt_action">Action</string>
    <string name="items"><u>Items</u></string>
    <string name="receipt_image">Receipt Image</string>
    <string name="add_to_expenses">Add to\nexpenses</string>
    <string name="exit">Exit</string>
    <string name="error_message">An Error has occurred, please try again later.</string>
    <string name="btn_event_edit">Edit event button</string>
    <string name="event_budget">Budget</string>
    <string name="event_title">Event Title</string>
    <string name="textview">TextView</string>
    <string name="_45">45%</string>
    <string name="image_view">image_view</string>
    <string name="button_save">Save</string>
    <string name="button_receipt_scanning">Receipt Scanning</string>
    <string name="no_event_text">There is no event today.</string>
    <string name="expense_logging">Expense Logging</string>
    <string name="expense_title">Expense Title</string>
    <string name="amount_of_money_spent">Amount of money spent</string>
    <string name="date">Date</string>
    <string name="price_tag_icon">price tag icon</string>
    <string name="description">Description</string>
    <string name="todo">TODO</string>
    <string name="estimated_budget">Estimated Budget</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    <string name="add_sub_event">Add Sub Event</string>
    <string name="save_event">Save Event</string>
    <string name="title_of_event">Title of Event</string>
    <string name="sub_event_title">Sub Event Title</string>
    <string name="select_sub_event_date">Select Sub Event Date</string>
    <string name="sub_event_end_time">Sub-Event End Time</string>
    <string name="budget">budget</string>
    <string name="sub_event_edit">sub-event edit</string>
    <string name="default_web_client_id" />
    <string name="new_event">New Event</string>
    <string name="new_sub_event">New Sub-Event</string>
    <string name="events">Events</string>
    <string name="add_events">add events</string>
    <string name="edit_event">Edit Event</string>
    <string name="button_suggestion">"<b>Give me ideas</b> for my current budget"</string>
    <string name="chat_selection">0 Selected</string>
    <string name="copy">Copy</string>
    <string name="edit_sub_event">Edit Sub-Event</string>
</resources>