<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:buttonTint="@color/purple_500" />

    <TextView
        android:id="@+id/textViewProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/receipt_product"
        android:singleLine="false"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/receipt_amount"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/receipt_quantity"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/receipt_subtotal"
        android:padding="8dp" />
</LinearLayout>
