<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_purple"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtViewDate"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_title"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViewBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_budget"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnEventEdit"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="#9835D0"
            android:contentDescription="@string/btn_event_edit"
            android:src="@drawable/baseline_edit_square_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/subEventsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">
        <!-- Sub-events will be dynamically added here -->
    </LinearLayout>

</LinearLayout>
