<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEventTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/event_title"
                app:cursorColor="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/baseline_subtitles_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEventTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="end"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textColorHighlight="@color/budget_purple"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutBudget"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/estimated_budget"
                app:cursorColor="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/baseline_attach_money_24_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editBudget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="end"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textColorHighlight="@color/budget_purple"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_date"
                android:padding="16dp"
                app:startIconContentDescription="Date"
                app:startIconDrawable="@drawable/baseline_access_time_24_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="end"
                    android:inputType="none"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/end_date"
                android:padding="16dp"
                app:startIconContentDescription="Date"
                app:startIconDrawable="@drawable/baseline_access_time_24_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="end"
                    android:inputType="none"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnEditAddSubEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#9835D0"
                android:drawablePadding="5dp"
                android:paddingVertical="20dp"
                android:text="@string/add_sub_event"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnSaveEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#9835D0"
                android:drawablePadding="5dp"
                android:paddingVertical="20dp"
                android:text="@string/save_event"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>