<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingTop="30dp">


    <!-- Wrapper Layout with Background Image -->

    <LinearLayout
        android:id="@+id/wrapElement3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_background"
        android:orientation="vertical"
        android:padding="35dp"
        tools:ignore="UselessParent">
        <!-- Background image set here -->

        <!-- First Inner LinearLayout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/event_name"
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


            <ImageButton
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_more_horiz_24"
                android:contentDescription="@string/image_view" />

        </LinearLayout>

        <!-- Second Inner LinearLayout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.mikhaellopez.circularprogressbar.CircularProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cpb_background_progressbar_color="#E0E0E0"
                    app:cpb_background_progressbar_width="3dp"
                    app:cpb_progress="45"
                    app:cpb_progress_max="100"
                    app:cpb_progressbar_color="#4CAF50"
                    app:cpb_progressbar_width="7dp"
                    app:cpb_round_border="true" />

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/_45"
                    android:textColor="@color/white"
                    android:textSize="11sp" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
